--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="navigation-item">
               <a
-                href="./resume/SoumyaThoutam.pdf"
+                href="./resume/Resume_SoumyaThoutam.pdf"
                 target="_blank"
                 class="nav-link shake"
                 title="Preview Resume"
@@ -66,7 +66,7 @@
         <div class="aboutme col-14 col-md-4 ">
           <img
             class="img-fluid soumyaimage"
-            src="./images/me.jpeg"
+            src="./images/profile.jpg"
             alt="Avatar" 
             style="width:288px"
             style="height:auto"
@@ -101,7 +101,7 @@
               >
                 <div>
                   <h3>Accenture Private Ltd.</h3>
-                  <h4>Software Engineer</h4>
+                  <h4>Associate Software Engineer</h4>
                   <h5>Nov 2020 - Dec 2021</h5>
                 </div>
               </button>
