--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="aboutme col-14 col-md-4 ">
           <img
             class="img-fluid soumyaimage"
-            src="./images/profile.jpg"
+            src="./images/profile1.jpg"
             alt="Avatar" 
             style="width:288px"
             style="height:auto"
