--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
             Hi, my name is <strong>Soumya Thoutam.</strong> I am pursuing my Masters in Computer Science at
             Portland State University.
           </p>
-          <p>I have experience of 1 year at MNC company in India. I have also participated in Hackathon and coding challenges. 
-            Developed projects on booming technologies. My focus is to become Software Developer. I am interested in ML and AI 
-            technologies where I developed some projects. I also want to explore new/present technologies and upgrade my skills. 
-            Currently, <strong>I am looking for intern opportunities in the development/DevOps field.</strong>
+          <p>a Python enthusiast with a passion for crafting robust APIs, managing databases, and leveraging AWS solutions. Committed to reliability, I thrive in scaling production web applications. My journey in technology is driven by a desire to contribute to innovative solutions, exemplified by my excitement about contributing to Check's cutting-edge solutions.
           </p>
         </div>
       </main>
