--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <h3>Portland State University</h3>
-              <p>Masters in Computer Science (Jan 2022 - Present)</p>
+              <p>Masters in Computer Science (Jan 2022 - June 2023)</p>
             </li>
             <li class="list-group-item">
               <h3>Jawaharlal Nehru Technological University</h3>
