--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         </div>
         <div class="aboutsection col-12 col-md-7 p-3">
           <p id="aboutsection">
-            Hi, my name is <strong>Soumya Thoutam.</strong> I am pursuing my Masters in Computer Science at
-            Portland State University.
+            Hi, my name is <strong>Soumya Thoutam.</strong> Masters Graduate Student in Computer Science from Portland State University.
           </p>
           <p>a Python enthusiast with a passion for crafting robust APIs, managing databases, and leveraging AWS solutions. Committed to reliability, I thrive in scaling production web applications. My journey in technology is driven by a desire to contribute to innovative solutions, exemplified by my excitement about contributing to Check's cutting-edge solutions.
           </p>
